<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="home_fragment_title">Home</string>
    <string name="error_blank_title_task">Invalid title</string>
    <string name="error_reminder_passed_due_time">You can not set a reminder for a time in the past</string>
    <string name="apply_filter">Apply</string>
    <string name="filter_from">From</string>
    <string name="filter_to">To</string>
    <string name="empty_task_list_header">No Tasks Yet...</string>
    <string name="empty_task_list_sub_header">Press + to add tasks</string>
    <string name="clear">"Clear "</string>
    <string name="filter_date_label">%d/%d/%d</string>
    <string name="no_duedate_time">No Start And End Date</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="filter_tasks">Filters</string>
    <string name="priority_low_labeled">Priority Low</string>
    <string name="priority_med_labeled">Priority Medium</string>
    <string name="priority_high_labeled">Priority High</string>
    <string name="priority">Priority</string>
    <string name="categories">Categories</string>
    <string name="tags">Tags</string>
    <string name="set_date_and_time">Set Date and Time</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Select Time</string>
    <string name="pick_date">Pick a date</string>
    <string name="pick_time">Pick a Time</string>
    <string name="pick_date_time">Pick a Date `&amp;` Time</string>
    <string name="no_date">No Date</string>
    <string name="no_time">No Time</string>
    <string name="no_reminder">No Reminder</string>
    <string name="more">More</string>
    <string name="common_due_date_12_pm">Today 12:00 PM</string>
    <string name="common_due_date_9_am">09:00 AM</string>
    <string name="common_due_date_6_pm">06:00 PM</string>
    <string name="priority_unset">None</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>
    <string name="priority_high">High</string>
    <string name="reminder_unset">None</string>
    <string name="category_unset">None</string>
    <string name="category_work">Work</string>
    <string name="category_personal">Personal</string>
    <string name="category_wish_list">Wish List</string>
    <string name="no_category">No category</string>
    <string name="multiple_categories">%s categories</string>
    <string name="no_priority">No Priority</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="priority_chip_filter">Priority %s</string>
    <string name="suggestion_due_date_picker_15" translatable="false">15</string>
    <string name="suggestion_due_date_picker_16" translatable="false">16</string>
    <string name="error_blank_title">Please enter a title</string>
    <string name="add_new_category">Add New</string>
    <string name="profile_title_task_overview">Task OverView</string>
    <string name="profile_title_categories">Categories</string>
    <string name="category_dialog">Category</string>
    <string name="completed">Completed</string>
    <string name="allTasks">All Tasks</string>
    <string name="chart_no_data">No data available</string>
    <string name="settings_choose_theme">Choose Theme</string>
    <string name="settings_choose_language">Choose Language</string>
    <string name="settings_tags">Manage Tags</string>
    <string name="category_management_title">Category Management</string>
    <string name="save">Save</string>
    <string name="time_format_12">12 Hours</string>
    <string name="time_format_24">24 Hours</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="language_english">English</string>
    <string name="language_persian">فارسی</string>
    <string name="system_default">System Default</string>
    <string name="about">About App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="help_center">Help Center</string>
    <string name="rate_us">Rate Us</string>
    <string name="version">Version</string>
    <string name="no_email_error">There are no email clients installed.</string>
    <string name="feedback_email_subject">FeedBack About ToDo</string>
    <string name="no_category_added">No Category Added</string>
    <string name="no_data_available">No Data Available</string>
    <string name="home">Home</string>
    <string name="new_category">New Category</string>
    <string name="tasks_item_due_date_time">%s%s</string>
    <string name="add_a_task">Add a Task</string>
    <string name="sort">Sort</string>
    <string name="sort_type_priority">Sorted By Priority</string>
    <string name="sort_type_due_date">Sorted By Due Date</string>
    <string name="sort_type_date_added">Sorted By Date Added</string>
    <string name="sort_type_alphabetically">Sorted By Alphabetically</string>
    <string name="sort_by_priority">Sort By Priority</string>
    <string name="sort_by_due_date">Sort By Due Date</string>
    <string name="sort_by_date_added">Sort By Date Added</string>
    <string name="sort_by_alphabetically">Sort By Alphabetically</string>
</resources>